Mobile, tablet: Line height fixed

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -14,10 +14,8 @@
 
       /* MEDIA QUERY : TABLET */
       @media (min-width: 600px) {
-        .root,
-        .footer,
-        .greeting {
-          line-height: 20px !important;
+        .root {
+          line-height: 22px !important;
         }
 
         /* logo */
@@ -115,10 +113,7 @@
 
       /* MEDIA QUERY : DESKTOP */
       @media (min-width: 1100px) {
-        .root,
-        .footer,
-        .greeting,
-        .support {
+        .root {
           line-height: 24px !important;
         }
 
@@ -196,6 +191,7 @@
           font-family: Verdana, Geneva, sans-serif;
           border-spacing: 0;
           background-color: #fff;
+          line-height: 20px;
         "
       >
         <!-- LOGO -->
@@ -217,12 +213,7 @@
           >
             <p
               class="bold-font"
-              style="
-                text-align: center;
-                font-size: 16px;
-                font-weight: 700;
-                line-height: 20px;
-              "
+              style="text-align: center; font-size: 16px; font-weight: 700"
             >
               Important Ranking Alert: <br />Key Changes You Need to Know
             </p>
@@ -1642,7 +1633,7 @@
                           <tr>
                             <td
                               class="view-more-subheading"
-                              style="line-height: 18px; padding-bottom: 10px"
+                              style="padding-bottom: 10px"
                             >
                               We've surfaced some key alerts, but there are more
                               critical ones need your attention. View All Alerts
@@ -1705,9 +1696,7 @@
 
               <!-- GREETING -->
               <tr>
-                <td class="greeting" style="line-height: 20px">
-                  Best,<br />The Infigrowth Team
-                </td>
+                <td class="greeting">Best,<br />The Infigrowth Team</td>
               </tr>
             </table>
           </td>
@@ -1736,11 +1725,7 @@
         <tr>
           <td
             class="footer"
-            style="
-              padding: 10px 10px 20px 10px;
-              line-height: 18px;
-              text-align: center;
-            "
+            style="padding: 10px 10px 20px 10px; text-align: center"
           >
             You are receiving this email as part of your Infigrowth account. We
             strive to provide valuable insights, but if you’d like to make
