link added to footer

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -1716,7 +1716,7 @@
             Need more help?<br />
             <a
               href="mailto:support@infigrowth.com"
-              style="color: #000; font-weight: 600"
+              style="color: #000; font-weight: 600; text-decoration: underline"
               >support@infigrowth.com
             </a>
           </td>
@@ -1730,7 +1730,10 @@
             You are receiving this email as part of your Infigrowth account. We
             strive to provide valuable insights, but if you’d like to make
             changes, you can
-            <a class="bold-font" href="#" style="color: #000; font-weight: 600"
+            <a
+              class="bold-font"
+              href="https://app.infigrowth.com/login"
+              style="color: #000; font-weight: 600; text-decoration: underline"
               >Update your preferences</a
             >
             anytime.
