Mobile: card main added padding tweaked

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -487,7 +487,7 @@
                     <tr>
                       <td
                         class="card-main"
-                        style="vertical-align: top; padding: 8px 14px"
+                        style="vertical-align: top; padding: 12px 14px"
                       >
                         <table
                           width="100%"
@@ -1111,7 +1111,7 @@
                     <tr>
                       <td
                         class="card-main"
-                        style="vertical-align: top; padding: 8px 14px"
+                        style="vertical-align: top; padding: 12px 14px"
                       >
                         <table
                           width="100%"
@@ -1733,6 +1733,7 @@
             <a
               class="bold-font"
               href="https://app.infigrowth.com/login"
+              target="_blank"
               style="color: #000; font-weight: 600; text-decoration: underline"
               >Update your preferences</a
             >
