SS : content changed

--- a/SS_grouped.html
+++ b/SS_grouped.html
@@ -241,11 +241,11 @@
                     Hi <strong class="bold-font">Robin Fernandes,</strong>
                   </p>
                   <p style="margin: 10px 0 0 0">
-                    Your ranking alerts have been triggered due to changes in
-                    your keyword performance, comparing
+                    Your website's search performance has triggered important
+                    alerts comparing
                     <strong class="bold-font">October 20-26, 2024,</strong> to
                     October 13-19, 2024. Review the details below to stay
-                    updated.
+                    informed.
                   </p>
                 </td>
               </tr>
