SS:project pill removed

--- a/SS_grouped.html
+++ b/SS_grouped.html
@@ -184,8 +184,8 @@
         class="root"
         style="
           font-size: 14px;
-          width: 550px;
-          max-width: 550px;
+          width: 100%;
+          max-width: 800px;
           border: 2px solid #eaf6ff;
           border-radius: 10px;
           font-family: Verdana, Geneva, sans-serif;
@@ -277,59 +277,6 @@
                               "
                             >
                               Robin Workspace
-                            </span>
-                          </td>
-                        </tr>
-                      </table>
-                    </div>
-                    <div class="pill-col">
-                      <table
-                        style="border-spacing: 0"
-                        width="100%"
-                        cellpadding="0"
-                        cellspacing="0"
-                      >
-                        <tr>
-                          <td>
-                            <span class="bold-font" style="font-weight: 600"
-                              >Project :</span
-                            >
-                            <!-- 📌 Updated pill span -->
-                            <span
-                              style="
-                                display: inline-block;
-                                vertical-align: middle; /* 🆕 updated to middle */
-                                border: 2px solid;
-                                padding: 5px 10px;
-                                border-radius: 4px;
-                              "
-                            >
-                              <!-- 🆕 Created inner table for icon and text -->
-                              <table
-                                style="border-spacing: 0"
-                                cellpadding="0"
-                                cellspacing="0"
-                                border="0"
-                              >
-                                <tr>
-                                  <td
-                                    style="
-                                      padding-right: 5px;
-                                      vertical-align: middle;
-                                    "
-                                  >
-                                    <img
-                                      height="20"
-                                      width="20"
-                                      src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744291329/Infidigit_Favicon_1_1_kew3ec.png"
-                                      style="display: block"
-                                    />
-                                  </td>
-                                  <td style="vertical-align: middle">
-                                    Infidigit SEO India
-                                  </td>
-                                </tr>
-                              </table>
                             </span>
                           </td>
                         </tr>
