SS: Overview card header changed

--- a/SS_grouped.html
+++ b/SS_grouped.html
@@ -345,7 +345,7 @@
                                       white-space: nowrap !important;
                                     "
                                   >
-                                    Overview of Alerts for Campaign :
+                                    Overview of Alerts for Project :
                                   </td>
                                 </tr>
                               </table>
