RT: added drop out ot top 10 content

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -803,7 +803,7 @@
                               "
                             >
                               <strong class="bold-font">5 Keywords</strong>
-                              Moved up by
+                              moved up by
                               <strong style="color: #43a047"
                                 >10 + Positions</strong
                               >
@@ -852,11 +852,57 @@
                             >
                               <strong class="bold-font">3 Keywords</strong>
                               <strong style="color: #fc3d39"
-                                >Lost a Featured Snippet</strong
+                                >lost a Featured Snippet</strong
                               >
                             </td>
                           </tr>
                           <!-- Spacer after each row Lost Feature Snippets  -->
+                          <tr>
+                            <td
+                              class="card-row-spacer"
+                              colspan="2"
+                              height="10"
+                            ></td>
+                          </tr>
+
+                          <!-- CARD CONTENT ROW  Dropped out of Top 10  -->
+                          <tr>
+                            <td
+                              style="
+                                vertical-align: middle;
+                                width: 10px;
+                                padding-top: 2px;
+                              "
+                            >
+                              <!-- Bullet Dot -->
+                              <table cellpadding="0" cellspacing="0" border="0">
+                                <tr>
+                                  <td
+                                    class="bullet-dot"
+                                    style="
+                                      background-color: #000;
+                                      width: 6px;
+                                      height: 6px;
+                                      border-radius: 50%;
+                                    "
+                                  ></td>
+                                </tr>
+                              </table>
+                            </td>
+                            <td
+                              class="card-content-row"
+                              style="
+                                padding-left: 5px;
+
+                                color: #000;
+                              "
+                            >
+                              <strong class="bold-font">5 Keywords</strong>
+                              dropped out of
+                              <strong style="color: #fc3d39">Top 10</strong>
+                            </td>
+                          </tr>
+                          <!-- Spacer after each row  Dropped out of Top 10   -->
                           <tr>
                             <td
                               class="card-row-spacer"
@@ -898,7 +944,7 @@
                               "
                             >
                               <strong class="bold-font">5 Keywords</strong>
-                              Dropped by
+                              dropped by
                               <strong style="color: #fc3d39"
                                 >10 + Positions</strong
                               >
@@ -1427,7 +1473,7 @@
                               "
                             >
                               <strong class="bold-font">5 Keywords</strong>
-                              Moved up by
+                              moved up by
                               <strong style="color: #43a047"
                                 >10 + Positions</strong
                               >
@@ -1476,11 +1522,57 @@
                             >
                               <strong class="bold-font">3 Keywords</strong>
                               <strong style="color: #fc3d39"
-                                >Lost a Featured Snippet</strong
+                                >lost a Featured Snippet</strong
                               >
                             </td>
                           </tr>
                           <!-- Spacer after each row Lost Feature Snippets  -->
+                          <tr>
+                            <td
+                              class="card-row-spacer"
+                              colspan="2"
+                              height="10"
+                            ></td>
+                          </tr>
+
+                          <!-- CARD CONTENT ROW  Dropped out of Top 10  -->
+                          <tr>
+                            <td
+                              style="
+                                vertical-align: middle;
+                                width: 10px;
+                                padding-top: 2px;
+                              "
+                            >
+                              <!-- Bullet Dot -->
+                              <table cellpadding="0" cellspacing="0" border="0">
+                                <tr>
+                                  <td
+                                    class="bullet-dot"
+                                    style="
+                                      background-color: #000;
+                                      width: 6px;
+                                      height: 6px;
+                                      border-radius: 50%;
+                                    "
+                                  ></td>
+                                </tr>
+                              </table>
+                            </td>
+                            <td
+                              class="card-content-row"
+                              style="
+                                padding-left: 5px;
+
+                                color: #000;
+                              "
+                            >
+                              <strong class="bold-font">5 Keywords</strong>
+                              dropped out of
+                              <strong style="color: #fc3d39">Top 10</strong>
+                            </td>
+                          </tr>
+                          <!-- Spacer after each row  Dropped out of Top 10   -->
                           <tr>
                             <td
                               class="card-row-spacer"
@@ -1522,7 +1614,7 @@
                               "
                             >
                               <strong class="bold-font">5 Keywords</strong>
-                              Dropped by
+                              dropped by
                               <strong style="color: #fc3d39"
                                 >10 + Positions</strong
                               >
