Single Tamplate >stable : workspace pill added

--- a/Single_templates/stable_rank_for_multiple_days_weeks.html
+++ b/Single_templates/stable_rank_for_multiple_days_weeks.html
@@ -1076,6 +1076,12 @@
                                   </div>
                                 </td>
                               </tr>
+                              <!-- Workspace pill -->
+                              <tr>
+                                <td style="padding-left: 45px; padding-bottom: 10px; padding-top: 30px;">
+                                  <span style="border:1px solid; padding: 6px 8px; display: inline-block;border-radius: 100px;font-weight: 600;"><span style="color: #757575;">Workspace: </span>Robin Workspace</span>
+                                </td>
+                              </tr>
                               <tr>
                                 <td
                                   class="txtsize"
@@ -1136,8 +1142,7 @@
                                             margin-left: 15px;
                                             margin-bottom: 5px;
                                             padding-left: 30px;
-                                            margin-top: 10px;
-                                            padding-top: 20px;
+                                            
                                           "
                                         >
                                           <span
