Grouped tamplate: preference link changed

--- a/SS_grouped.html
+++ b/SS_grouped.html
@@ -1576,7 +1576,7 @@
             changes, you can
             <a
               class="bold-font"
-              href="https://app.infigrowth.com/login"
+              href="https://app.infigrowth.com/home/manage-account?email-alerts"
               target="_blank"
               style="color: #000; font-weight: 600; text-decoration: underline"
               >Update your preferences</a
