--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -79,25 +79,6 @@
           padding: 20px 0 !important;
         }
 
-        .pill-row {
-          display: table;
-          /* width: 100%; */
-        }
-
-        .pill-col {
-          display: table-cell;
-          width: 50%;
-          vertical-align: top;
-          padding-right: 10px;
-        }
-
-        .pill-col:last-child {
-          padding-right: 0;
-        }
-        .pill-mobile {
-          padding-bottom: 0 !important;
-        }
-
         /* Overview card header */
         .overview-left,
         .overview-right {
@@ -255,7 +236,14 @@
                 <td class="workspace-project-pill" style="padding: 20px 0">
                   <!-- 🛠️ DESKTOP SIDE-BY-SIDE -->
                   <div class="pill-row">
-                    <div class="pill-col" style="padding-bottom: 10px">
+                    <span
+                      class="pill-col"
+                      style="
+                        padding-bottom: 10px;
+                        margin-right: 10px;
+                        display: inline-block;
+                      "
+                    >
                       <table
                         style="border-spacing: 0"
                         width="100%"
@@ -281,8 +269,15 @@
                           </td>
                         </tr>
                       </table>
-                    </div>
-                    <div class="pill-col">
+                    </span>
+                    <span
+                      class="pill-col"
+                      style="
+                        padding-bottom: 10px;
+                        margin-right: 10px;
+                        display: inline-block;
+                      "
+                    >
                       <table
                         style="border-spacing: 0"
                         width="100%"
@@ -334,7 +329,7 @@
                           </td>
                         </tr>
                       </table>
-                    </div>
+                    </span>
                   </div>
                 </td>
               </tr>
