--- a/SS_grouped.html
+++ b/SS_grouped.html
@@ -79,25 +79,6 @@
           padding: 20px 0 !important;
         }
 
-        .pill-row {
-          display: table;
-          /* width: 100%; */
-        }
-
-        .pill-col {
-          display: table-cell;
-          width: 50%;
-          vertical-align: top;
-          padding-right: 10px;
-        }
-
-        .pill-col:last-child {
-          padding-right: 0;
-        }
-        .pill-mobile {
-          padding-bottom: 0 !important;
-        }
-
         /* Overview card header */
         .overview-left,
         .overview-right {
@@ -255,7 +236,14 @@
                 <td class="workspace-project-pill" style="padding: 20px 0">
                   <!-- 🛠️ DESKTOP SIDE-BY-SIDE -->
                   <div class="pill-row">
-                    <div class="pill-col" style="padding-bottom: 10px">
+                    <span
+                      class="pill-col"
+                      style="
+                        padding-bottom: 10px;
+                        margin-right: 10px;
+                        display: inline-block;
+                      "
+                    >
                       <table
                         style="border-spacing: 0"
                         width="100%"
@@ -281,7 +269,67 @@
                           </td>
                         </tr>
                       </table>
-                    </div>
+                    </span>
+                    <span
+                      class="pill-col"
+                      style="
+                        padding-bottom: 10px;
+                        margin-right: 10px;
+                        display: inline-block;
+                      "
+                    >
+                      <table
+                        style="border-spacing: 0"
+                        width="100%"
+                        cellpadding="0"
+                        cellspacing="0"
+                      >
+                        <tr>
+                          <td>
+                            <span class="bold-font" style="font-weight: 600"
+                              >Project :</span
+                            >
+                            <!-- 📌 Updated pill span -->
+                            <span
+                              style="
+                                display: inline-block;
+                                vertical-align: middle; /* 🆕 updated to middle */
+                                border: 2px solid;
+                                padding: 5px 10px;
+                                border-radius: 4px;
+                              "
+                            >
+                              <!-- 🆕 Created inner table for icon and text -->
+                              <table
+                                style="border-spacing: 0"
+                                cellpadding="0"
+                                cellspacing="0"
+                                border="0"
+                              >
+                                <tr>
+                                  <td
+                                    style="
+                                      padding-right: 5px;
+                                      vertical-align: middle;
+                                    "
+                                  >
+                                    <img
+                                      height="20"
+                                      width="20"
+                                      src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744291329/Infidigit_Favicon_1_1_kew3ec.png"
+                                      style="display: block"
+                                    />
+                                  </td>
+                                  <td style="vertical-align: middle">
+                                    Infidigit SEO India
+                                  </td>
+                                </tr>
+                              </table>
+                            </span>
+                          </td>
+                        </tr>
+                      </table>
+                    </span>
                   </div>
                 </td>
               </tr>
