Single Tamplate > SearchSense > decrease : workspace pill added

--- a/Single_templates/SearchSense/decrease.html
+++ b/Single_templates/SearchSense/decrease.html
@@ -1330,6 +1330,12 @@
                                   </div>
                                 </td>
                               </tr>
+                              <!-- Workspace pill -->
+                              <tr>
+                                <td style="padding-left: 45px; padding-bottom: 2px;">
+                                  <span style="border:1px solid; padding: 6px 8px; display: inline-block;border-radius: 100px;font-weight: 600;"><span style="color: #757575;">Workspace: </span>Robin Workspace</span>
+                                </td>
+                              </tr>
                               <tr>
                                 <td class="txtsize" id="elm_1730889336860" style="
                                       mso-table-lspace: 0pt;
