RT: changed campaign location from india to America

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -450,7 +450,7 @@
                                     "
                                     valign="middle"
                                   >
-                                    India
+                                    United State of America
                                   </td>
                                   <td style="padding: 0 8px" valign="middle">
                                     <img
