Destop, Tablet>RT: Classname added to card-header

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -339,6 +339,7 @@
                     <!-- CARD HEADER -->
                     <tr>
                       <td
+                        class="card-header"
                         style="
                           background-color: #eaf6ff;
                           padding: 11px 14px 5px 14px;
@@ -353,6 +354,7 @@
                             max-width: 100%;
                             font-size: 14px;
                             padding-bottom: 10px;
+                            padding-right: 10px;
                           "
                         >
                           <table
@@ -1008,6 +1010,7 @@
                     <!-- CARD HEADER -->
                     <tr>
                       <td
+                        class="card-header"
                         style="
                           background-color: #eaf6ff;
                           padding: 11px 14px 5px 14px;
@@ -1022,6 +1025,7 @@
                             max-width: 100%;
                             font-size: 14px;
                             padding-bottom: 10px;
+                            padding-right: 10px;
                           "
                         >
                           <table
