RT: content updated

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -789,7 +789,7 @@
                               <strong class="bold-font">5 Keywords</strong>
                               moved up by
                               <strong style="color: #43a047"
-                                >10 + Positions</strong
+                                >10+ Positions</strong
                               >
                             </td>
                           </tr>
@@ -882,8 +882,10 @@
                               "
                             >
                               <strong class="bold-font">5 Keywords</strong>
-                              dropped out of
-                              <strong style="color: #fc3d39">Top 10</strong>
+                              dropped
+                              <strong style="color: #fc3d39"
+                                >out of the Top 10</strong
+                              >
                             </td>
                           </tr>
                           <!-- Spacer after each row  Dropped out of Top 10   -->
@@ -930,7 +932,7 @@
                               <strong class="bold-font">5 Keywords</strong>
                               dropped by
                               <strong style="color: #fc3d39"
-                                >10 + Positions</strong
+                                >10+ Positions</strong
                               >
                             </td>
                           </tr>
@@ -1459,7 +1461,7 @@
                               <strong class="bold-font">5 Keywords</strong>
                               moved up by
                               <strong style="color: #43a047"
-                                >10 + Positions</strong
+                                >10+ Positions</strong
                               >
                             </td>
                           </tr>
@@ -1552,8 +1554,10 @@
                               "
                             >
                               <strong class="bold-font">5 Keywords</strong>
-                              dropped out of
-                              <strong style="color: #fc3d39">Top 10</strong>
+                              dropped
+                              <strong style="color: #fc3d39"
+                                >out of the Top 10</strong
+                              >
                             </td>
                           </tr>
                           <!-- Spacer after each row  Dropped out of Top 10   -->
@@ -1600,7 +1604,7 @@
                               <strong class="bold-font">5 Keywords</strong>
                               dropped by
                               <strong style="color: #fc3d39"
-                                >10 + Positions</strong
+                                >10+ Positions</strong
                               >
                             </td>
                           </tr>
