Grouped:git changed

--- a/SS_grouped.html
+++ b/SS_grouped.html
@@ -31,7 +31,7 @@
 
         .banner img {
           width: 150px;
-          height: 103px;
+          height: 130px;
         }
 
         .main {
@@ -182,15 +182,20 @@
           >
             <p
               class="bold-font"
-              style="text-align: center; font-size: 16px; font-weight: 700"
+              style="
+                text-align: center;
+                font-size: 16px;
+                font-weight: 700;
+                margin-bottom: 0;
+              "
             >
               Search Performance Alert Triggered! <br />Key Changes Detected
             </p>
             <center>
               <img
-                src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745821161/RankTracker_a1w9as.gif"
+                src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1746175899/bells_bbbcjm.gif"
                 width="120px"
-                height="100px"
+                height="120px"
               />
             </center>
           </td>
